Fix header not covering subtitle

--- a/views/appledoc_stylesheet.scss
+++ b/views/appledoc_stylesheet.scss
@@ -334,7 +334,7 @@ header#app_header.minimised {
       display: block;
       position: absolute;
       top: 0;
-      height: 108px;
+      height: 116px;
       padding: 0;
       margin-left:-20px;
       z-index:1001;
